<resources>
    <string name="app_name">玩Android</string>

    <!--account-->
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register_tips">没有账号？去注册</string>
    <string name="register">注册</string>
    <string name="login_suc">登录成功</string>
    <string name="mine_logout">退出登录</string>
    <string name="please_login">请先登录</string>
    <string name="password_again">请输入确认密码</string>
    <string name="register_suc">注册成功</string>

    <!--home-->
    <string name="password_empty">请输入账号/密码~</string>
    <string name="home">首页</string>
    <string name="system">体系</string>
    <string name="navigation">导航</string>
    <string name="mine">我的</string>
    <string name="wechat">公众号</string>

    <!--splash-->
    <string name="app_desc">一款每日推荐优质文章的app</string>

    <!--article item-->
    <string name="author">作者</string>
    <string name="category">分类</string>
    <string name="test_time">5小时前</string>
    <string name="test">哦i啊囧阿三加大家送阿斯顿啊四啊就死哦i啊囧阿三加大家送阿斯顿啊四啊就死都啊就哦i啊囧阿三加大家送阿斯顿啊四啊就死都啊就哦i啊囧阿三加大家送阿斯顿啊四都啊就哦i啊囧阿三加大家送阿斯顿啊四啊就死都啊就哦i啊囧阿三加大家送阿斯顿啊哦i啊囧阿三加大家送阿斯顿啊四啊就死哦i啊囧阿三加大家送阿斯顿啊四啊就死都啊就哦i啊囧阿三加大家送阿斯顿啊四啊就死都啊就哦i啊囧阿三加大家送阿斯顿啊四都啊就哦i啊囧阿三加大家送阿斯顿啊四啊就死都啊就哦i啊囧阿三加大家送阿斯顿啊四四</string>

    <string name="horizontal_bar">——</string>
    <string name="common_tools">常用工具</string>
    <string name="common_websites">常用网站</string>
    <string name="common_title">常用专区</string>
    <string name="news_article">最新博文</string>

    <!--search-->
    <string name="search">搜索</string>
    <string name="input_tips">请输入搜索关键词</string>
    <string name="hot_key">热门搜索</string>
    <string name="history">最近搜索</string>

    <!--todo模块-->
    <string name="todo">TODO</string>
    <string name="all">全部</string>
    <string name="work">工作</string>
    <string name="life">生活</string>
    <string name="finish">完成</string>
    <string name="study">学习</string>
    <string name="delete">删除</string>
    <string name="news">News</string>
    <string name="add_todo">添加TODO</string>
    <string name="save">保存</string>
    <string name="type">类型：</string>
    <string name="title">标题：</string>
    <string name="date">日期：</string>
    <string name="content">内容：</string>
    <string name="must">必填</string>
    <string name="not_must">非必填</string>
    <string name="title_empty">标题不能为空</string>
    <string name="content_empty">内容不能为空</string>
    <string name="save_suc">保存成功</string>
    <string name="whole">全</string>
    <string name="mixed">杂七杂八</string>
    <string name="reduction">还原</string>
    <string name="time_empty">时间不能为空</string>
    <string name="important_suc">标记成功</string>

    <!--mine-->
    <string name="mine_collect">我的收藏</string>
    <string name="setting">设置</string>
    <string name="mine_about">关于我的</string>
    <string name="logout">退出</string>
    <string name="project">项目</string>
    <string name="clear_history">清除历史记录</string>

    <string name="github">Github：https://github.com/hyzhan43</string>
    <string name="csdn">Csdn：https://blog.csdn.net/weixin_40595516</string>
    <string name="email">Email：hyzhan43@163.com</string>
    <string name="qq">QQ：1063523767</string>

    <string name="loading">加载中~</string>
    <string name="network_fail">网络异常</string>
    <string name="exit_app_tips">再按一次退出程序</string>
    <string name="empty_data">没有相关数据哦~</string>
    <string name="smile_tip">开心每一天 \t :)</string>
    <string name="important">重要</string>
    <string name="delete_suc">删除成功</string>
    <string name="load_failed">加载失败</string>

    <string name="keyword_empty">请输入关键词</string>
    <string name="account_empty">账号不能为空</string>
    <string name="repassword_error">两次密码输入不正确</string>
    <string name="nuggets">掘金：https://juejin.im/user/5c7c8bd4518825408d6fe014</string>
    <string name="logout_tips">确定要退出登录吗？</string>
    <string name="cancel">取消</string>
    <string name="right">确定</string>
    <string name="not_login">未登录</string>
    <string name="developing">开发中</string>
    <string name="score">积分: %d</string>
    <string name="grade">等级: %d</string>
    <string name="rank">排名: %d</string>
    <string name="logout_success">退出成功</string>
</resources>
