<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/mTvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="@dimen/s10" />

        <TextView
            android:id="@+id/mTvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxEms="14"
            android:text="@string/test"
            android:textSize="@dimen/s16"
            app:layout_constraintTop_toBottomOf="@+id/mTvAuthor" />

        <TextView
            android:id="@+id/mTvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/category"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/s10"
            app:layout_constraintTop_toBottomOf="@+id/mTvTitle" />

        <TextView
            android:id="@+id/mTvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/test_time"
            android:textSize="@dimen/s10"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/mIvLove"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_collect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/mTvNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:rotation="-45"
        android:visibility="gone"
        android:text="@string/news"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/s12"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.cardview.widget.CardView>