<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/common_bar" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_author" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/mine_about" />

    <TextView
        android:id="@+id/mTvGithub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/github"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/mTvCsdn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/csdn"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/email"
        android:layout_marginTop="10dp"/>
</LinearLayout>