<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/mBtnTools"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:text="@string/common_tools"
        android:textColor="@color/white"
        android:textSize="@dimen/s16" />

    <Button
        android:id="@+id/mBtnWebsites"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:text="@string/common_websites"
        android:textColor="@color/white"
        android:textSize="@dimen/s16" />

</LinearLayout>