<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_mine_bg"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/mCivIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:elevation="5dp"
        android:src="@drawable/ic_logo"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/mTvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/font_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mCivIcon"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/mTvScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/len_10"
        android:textSize="@dimen/font_14"
        android:gravity="end"
        android:text="@string/score"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/mTvGrade"
        app:layout_constraintTop_toBottomOf="@+id/mTvName" />

    <TextView
        android:id="@+id/mTvGrade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/len_10"
        android:textSize="@dimen/font_14"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/grade"
        app:layout_constraintRight_toLeftOf="@+id/mTvRank"
        app:layout_constraintLeft_toRightOf="@+id/mTvScore"
        app:layout_constraintTop_toBottomOf="@+id/mTvName" />

    <TextView
        android:id="@+id/mTvRank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/len_10"
        android:textSize="@dimen/font_14"
        android:textColor="@color/colorPrimary"
        android:text="@string/rank"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/mTvGrade"
        app:layout_constraintTop_toBottomOf="@+id/mTvName" />


</androidx.constraintlayout.widget.ConstraintLayout>

