<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:orientation="vertical">

    <include
        android:id="@+id/mIcBar"
        layout="@layout/commom_bar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:elevation="5dp"
        android:src="@drawable/ic_logo"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_user" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:hint="@string/account">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mTieAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_password" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:hint="@string/password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mTiePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_password" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:hint="@string/password_again">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mTiePasswordAg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/mBtnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/btn_bg"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/s18" />
</LinearLayout>
